(#7) Support AMD references (and installation through bower)

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-   "name": "laxarjs/ax-accordion-widget",
+   "name": "laxar-accordion-widget",
    "version": "2.2.0-pre",
    "license": "MIT",
    "repository": {
