--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,6 @@
       "laxar-accordion-control": "^1.0.0"
    },
    "devDependencies": {
-      "es5-shim": "es-shims/es5-shim#^2.3.x",
-      "jasmine": "pivotal/jasmine#^1.3.x"
+      "laxar-mocks": "1.0.0-alpha.1"
    }
 }
