(11) fixed dependencies in bower configuration and travis configuration

--- a/bower.json
+++ b/bower.json
@@ -7,9 +7,9 @@
       "url": "https://github.com/LaxarJS/ax-accordion-widget.git"
    },
    "dependencies": {
-      "laxar": "^1.0.0",
-      "laxar-patterns": "^1.0.0",
-      "laxar-uikit": "^1.0.0",
+      "laxar": "v1.2.0-alpha.2",
+      "laxar-patterns": "v1.2.0-alpha.2",
+      "laxar-uikit": "^1.1.0",
 
       "laxar-accordion-control": "^1.0.0"
    },
