--- a/bower.json
+++ b/bower.json
@@ -7,12 +7,12 @@
       "url": "https://github.com/LaxarJS/ax-accordion-widget.git"
    },
    "dependencies": {
-      "laxar": "~1.2.0-alpha.2",
-      "laxar-patterns": "~1.2.0-alpha.2",
+      "laxar": "~1.2.0",
+      "laxar-patterns": "~1.2.0",
       "laxar-uikit": "~1.1.0",
       "laxar-accordion-control": "^1.0.0"
    },
    "devDependencies": {
-      "laxar-mocks": "1.0.0-alpha.1"
+      "laxar-mocks": "1.0.0"
    }
 }
