--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
    "name": "laxar-accordion-widget",
-   "version": "2.4.0-pre",
+   "version": "2.4.0",
    "license": "MIT",
    "repository": {
       "type": "https",
