--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eslint": "eslint *.js spec"
   },
   "dependencies": {
-    "laxar-accordion-control": "2.0.0-alpha.2"
+    "laxar-accordion-control": "2.0.0"
   },
   "devDependencies": {
     "angular": "^1.5.11",
@@ -37,9 +37,9 @@
     "laxar": "^2.0.0",
     "laxar-uikit": "^2.0.0",
     "laxar-angular-adapter": "2.0.0",
-    "laxar-infrastructure": "^0.1.0-alpha.4",
-    "laxar-loader": "^2.0.0-alpha.0",
-    "laxar-mocks": "^2.0.0-beta.2",
+    "laxar-infrastructure": "^2.0.0",
+    "laxar-loader": "^2.0.0",
+    "laxar-mocks": "^2.0.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
