--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/LaxarJS/ax-accordion-widget.git"
+    "url": "https://github.com/LaxarJS/laxar-accordion-widget.git"
   },
   "scripts": {
     "prepublish": "npm run dist",
@@ -19,7 +19,7 @@
     "eslint": "eslint *.js spec"
   },
   "dependencies": {
-    "laxar-accordion-control": "2.0.0"
+    "laxar-accordion-control": "2.0.0-alpha.2"
   },
   "devDependencies": {
     "angular": "^1.5.11",
@@ -34,24 +34,24 @@
     "eslint-config-laxarjs": "^0.3.0",
     "html-loader": "^0.4.5",
     "karma": "^1.5.0",
-    "laxar": "^2.0.0",
-    "laxar-uikit": "^2.0.0",
-    "laxar-angular-adapter": "2.0.0",
-    "laxar-infrastructure": "^2.0.0",
-    "laxar-loader": "^2.0.0",
-    "laxar-mocks": "^2.0.0",
+    "laxar": "2.0.0-rc.3",
+    "laxar-angular-adapter": "2.0.0-rc.1",
+    "laxar-infrastructure": "2.0.0-rc.1",
+    "laxar-loader": "2.0.0-rc.3",
+    "laxar-mocks": "2.0.0-rc.2",
+    "laxar-uikit": "2.0.0-rc.1",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
   "peerDependencies": {
     "angular": "^1.5.11",
     "angular-sanitize": "^1.5.11",
-    "laxar": "^2.0.0",
-    "laxar-uikit": "^2.0.0",
-    "laxar-angular-adapter": "2.0.0"
+    "laxar": "2.0.0-rc.3",
+    "laxar-uikit": "2.0.0-rc.1",
+    "laxar-angular-adapter": "2.0.0-rc.1"
   },
   "bugs": {
-    "url": "https://github.com/LaxarJS/ax-accordion-widget/issues",
+    "url": "https://github.com/LaxarJS/laxar-accordion-widget/issues",
     "email": "info@laxarjs.org"
   }
 }
