--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laxar-accordion-widget",
-  "version": "3.0.0-alpha.0",
+  "version": "3.0.0-rc.0",
   "description": "Provides multiple widget areas in the form of an accordion",
   "homepage": "http://laxarjs.org",
   "main": "laxar-accordion-widget.js",
