--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "laxar-accordion-widget",
-  "version": "3.0.0-rc.1",
+  "version": "3.0.0",
   "description": "Provides multiple widget areas in the form of an accordion",
   "homepage": "http://laxarjs.org",
   "main": "laxar-accordion-widget.js",
@@ -34,21 +34,21 @@
     "eslint-config-laxarjs": "^0.3.0",
     "html-loader": "^0.4.5",
     "karma": "^1.5.0",
-    "laxar": "2.0.0-rc.3",
-    "laxar-angular-adapter": "2.0.0-rc.1",
-    "laxar-infrastructure": "2.0.0-rc.1",
-    "laxar-loader": "2.0.0-rc.3",
-    "laxar-mocks": "2.0.0-rc.2",
-    "laxar-uikit": "2.0.0-rc.1",
+    "laxar": "2.0.0",
+    "laxar-angular-adapter": "2.0.0",
+    "laxar-infrastructure": "2.0.0",
+    "laxar-loader": "2.0.0",
+    "laxar-mocks": "2.0.0",
+    "laxar-uikit": "2.0.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
   "peerDependencies": {
     "angular": "^1.5.11",
     "angular-sanitize": "^1.5.11",
-    "laxar": "2.0.0-rc.3",
-    "laxar-uikit": "2.0.0-rc.1",
-    "laxar-angular-adapter": "2.0.0-rc.1"
+    "laxar": "2.0.0",
+    "laxar-uikit": "2.0.0",
+    "laxar-angular-adapter": "2.0.0"
   },
   "bugs": {
     "url": "https://github.com/LaxarJS/laxar-accordion-widget/issues",
